2004-02-03 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/ralloc.c (newReg): fixed bug #908929

2004-03-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/gen.c: added missing #include "main.h"

2004-03-02 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/device.c (checkAddSym): NEW, adds a symbol to set while
	checking if symbol is already in set,
	* src/pic16/device.h: prototype for checkAddSym,
	* src/pic16/gen.c: (_G): added entry interruptvector,
	* (assignResultValue): removed some commented out lines,
	* (genFunction): check for ISR via sym->type, absolute section for
	interrupt code is created via a new pBlock, the goto instruction is
	placed now correctly at the interrupt vector position, changed all
	references from ivec to _G.interruptvector,
	* WREG,STATUS,BSR are not saved in stack upon an entry to interrupt
	is the interrupt is a high priority one, same for return from ISR,
	* src/pic16/glue.c: changed all calls of addSetHead for publics and
	externs to calls of checkAddSym,
	* src/pic16/pcode.c (pic16_pBlockConvert2*): emit warning when
	pic16_pcode_verbose flag is set,
	* src/pic16/pcode.h: extern to pic16_pcode_verbose,
	* src/pic16/pcoderegs.c: message about how many registers are saved
	will only be emitted if pic16_pcode_verbose flag is set,

2004-03-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/ralloc.h,
	* src/ds390/ralloc.c (ds390_regWithIdx),
	* src/ds390/gen.c (emitcode),
	* src/ds390/main.h,
	* src/ds390/main.c (instructionSize, ds390newAsmLineNode, updateOpRW,
	ds390opcodeCompare, asmLineNodeFromLineNode, getInstructionSize,
	ds390operandCompare, getRegsRead, getRegsWritten,
	initializeAsmLineNode): customized instruction size calculation for
	ds390, started basis for some register optimizations
	* src/ds390/gen.c (gen390Code, emitcode): associate iCodes with
	corresponding assembly output
	* src/ds390/gen.c (genFunction, genEndFunction): added case to handle