@@ -1,3 +1,7 @@
+2004-03-03 Hans Dorn <hjdorn AT users.sourceforge.net>
+
+	* src/pic16/gen.c (gencjne): fixed for right=REG / left=LIT
+
 2004-02-03 Vangelis Rokas <vrokas AT otenet.gr>
 
 	* src/pic16/ralloc.c (newReg): fixed bug #908929
